--- a/PerchReadyApp/apps/Perch/iphone/native/Perch/Base.lproj/Main.storyboard
+++ b/PerchReadyApp/apps/Perch/iphone/native/Perch/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14E17e" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="9cO-ze-Pv2">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="9cO-ze-Pv2">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
@@ -1813,17 +1813,17 @@ per Minute</string>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WaC-bi-QeX">
-                                <rect key="frame" x="0.0" y="428" width="320" height="140"/>
+                                <rect key="frame" x="0.0" y="428" width="320" height="400"/>
                                 <subviews>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="circle_gray" translatesAutoresizingMaskIntoConstraints="NO" id="JJL-oj-Gn2">
-                                        <rect key="frame" x="24" y="41" width="80" height="80"/>
+                                        <rect key="frame" x="24" y="32" width="80" height="80"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="80" id="5hU-pT-ROG"/>
                                             <constraint firstAttribute="height" constant="80" id="PkQ-pc-Pz4"/>
                                         </constraints>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Incentive Available" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JU8-Oe-6QQ">
-                                        <rect key="frame" x="24" y="14" width="136" height="22"/>
+                                        <rect key="frame" x="24" y="5" width="136" height="22"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="22" id="7RE-Cu-egK"/>
                                             <constraint firstAttribute="width" constant="136" id="bcu-Fi-hC7"/>
@@ -1833,13 +1833,13 @@ per Minute</string>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Electrical Panel" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zjb-BP-DeT">
-                                        <rect key="frame" x="124" y="59" width="176" height="22"/>
+                                        <rect key="frame" x="124" y="50.5" width="176" height="21.5"/>
                                         <fontDescription key="fontDescription" name="Karla-Regular" family="Karla" pointSize="18"/>
                                         <color key="textColor" red="0.3529411764705882" green="0.3529411764705882" blue="0.3529411764705882" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ADD SENSOR +" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VgH-nr-srn">
-                                        <rect key="frame" x="124" y="87" width="168" height="16"/>
+                                        <rect key="frame" x="124" y="78" width="168" height="16"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="16" id="UZc-t6-JGc"/>
                                             <constraint firstAttribute="width" constant="168" id="pR6-ch-v71"/>
@@ -1867,25 +1867,17 @@ per Minute</string>
                                 <constraints>
                                     <constraint firstAttribute="trailing" secondItem="zjb-BP-DeT" secondAttribute="trailing" constant="20" id="4ie-Zk-F1Z"/>
                                     <constraint firstItem="JJL-oj-Gn2" firstAttribute="leading" secondItem="WaC-bi-QeX" secondAttribute="leading" constant="24" id="Far-L7-bTs"/>
-                                    <constraint firstAttribute="height" constant="140" id="OpR-dV-Qbl"/>
+                                    <constraint firstAttribute="height" constant="400" id="OpR-dV-Qbl"/>
                                     <constraint firstItem="VgH-nr-srn" firstAttribute="leading" secondItem="JJL-oj-Gn2" secondAttribute="trailing" constant="20" id="QMT-13-ydo"/>
-                                    <constraint firstAttribute="centerY" secondItem="JJL-oj-Gn2" secondAttribute="centerY" constant="-11" id="QmV-8A-5zX"/>
                                     <constraint firstItem="iLi-ju-ZpB" firstAttribute="top" secondItem="WaC-bi-QeX" secondAttribute="top" constant="20" id="UIa-3N-Vsz"/>
                                     <constraint firstItem="JU8-Oe-6QQ" firstAttribute="leading" secondItem="WaC-bi-QeX" secondAttribute="leading" constant="24" id="dJj-6m-fNp"/>
                                     <constraint firstItem="VgH-nr-srn" firstAttribute="top" secondItem="zjb-BP-DeT" secondAttribute="bottom" constant="6" id="ecr-CK-4qg"/>
-                                    <constraint firstAttribute="centerY" secondItem="iLi-ju-ZpB" secondAttribute="centerY" id="edm-4g-DtV"/>
                                     <constraint firstAttribute="centerX" secondItem="iLi-ju-ZpB" secondAttribute="centerX" id="j9v-7a-wbX"/>
                                     <constraint firstItem="zjb-BP-DeT" firstAttribute="leading" secondItem="JJL-oj-Gn2" secondAttribute="trailing" constant="20" id="k4e-SP-KhU"/>
-                                    <constraint firstItem="JU8-Oe-6QQ" firstAttribute="top" secondItem="WaC-bi-QeX" secondAttribute="top" constant="13" id="l31-PT-GSa"/>
                                     <constraint firstItem="JJL-oj-Gn2" firstAttribute="top" secondItem="JU8-Oe-6QQ" secondAttribute="bottom" constant="5" id="qhu-Zo-b33"/>
-                                    <constraint firstAttribute="centerY" secondItem="zjb-BP-DeT" secondAttribute="centerY" constant="0.5" id="sVu-5S-aev"/>
+                                    <constraint firstItem="zjb-BP-DeT" firstAttribute="top" secondItem="WaC-bi-QeX" secondAttribute="top" constant="50.5" id="tLB-ZH-hqa"/>
+                                    <constraint firstItem="JU8-Oe-6QQ" firstAttribute="top" secondItem="WaC-bi-QeX" secondAttribute="top" constant="5" id="vPA-xe-RQh"/>
                                 </constraints>
-                                <variation key="default">
-                                    <mask key="constraints">
-                                        <exclude reference="l31-PT-GSa"/>
-                                        <exclude reference="edm-4g-DtV"/>
-                                    </mask>
-                                </variation>
                                 <connections>
                                     <outletCollection property="gestureRecognizers" destination="E9B-DF-pRV" appends="YES" id="u2j-1z-0no"/>
                                 </connections>
@@ -1982,16 +1974,16 @@ per Minute</string>
                         <constraints>
                             <constraint firstItem="q3S-fH-uYB" firstAttribute="leading" secondItem="d9m-ap-Jui" secondAttribute="leading" id="8V1-n5-rbV"/>
                             <constraint firstItem="q3S-fH-uYB" firstAttribute="top" secondItem="pHF-4b-jPT" secondAttribute="bottom" id="AGr-0a-HjX"/>
+                            <constraint firstItem="WaC-bi-QeX" firstAttribute="top" secondItem="X3k-iN-LH2" secondAttribute="bottom" id="Bah-4b-96E"/>
                             <constraint firstAttribute="trailing" secondItem="WaC-bi-QeX" secondAttribute="trailing" id="ELu-kr-dhm"/>
                             <constraint firstItem="X3k-iN-LH2" firstAttribute="leading" secondItem="d9m-ap-Jui" secondAttribute="leading" id="Elq-SJ-vP1"/>
                             <constraint firstItem="WaC-bi-QeX" firstAttribute="leading" secondItem="d9m-ap-Jui" secondAttribute="leading" id="GfV-TX-XA9"/>
+                            <constraint firstItem="WaC-bi-QeX" firstAttribute="top" secondItem="fz0-gt-lSQ" secondAttribute="top" constant="-140" id="Q57-Hb-uNE"/>
                             <constraint firstAttribute="trailing" secondItem="pHF-4b-jPT" secondAttribute="trailing" id="XY5-d9-7fq"/>
-                            <constraint firstItem="WaC-bi-QeX" firstAttribute="top" secondItem="X3k-iN-LH2" secondAttribute="bottom" id="cAO-ic-klV"/>
                             <constraint firstItem="pHF-4b-jPT" firstAttribute="leading" secondItem="d9m-ap-Jui" secondAttribute="leading" id="fTJ-bh-P7D"/>
                             <constraint firstItem="pHF-4b-jPT" firstAttribute="top" secondItem="d9m-ap-Jui" secondAttribute="top" constant="20" id="fk8-Lj-AWH"/>
                             <constraint firstAttribute="trailing" secondItem="q3S-fH-uYB" secondAttribute="trailing" id="oxb-ED-vZo"/>
                             <constraint firstAttribute="trailing" secondItem="X3k-iN-LH2" secondAttribute="trailing" id="rxY-zS-gYS"/>
-                            <constraint firstAttribute="bottom" secondItem="WaC-bi-QeX" secondAttribute="bottom" id="sCd-dz-z5Q"/>
                             <constraint firstItem="X3k-iN-LH2" firstAttribute="top" secondItem="q3S-fH-uYB" secondAttribute="bottom" id="yic-TF-Gab"/>
                         </constraints>
                     </view>
@@ -2007,7 +1999,6 @@ per Minute</string>
                         <outlet property="forwardArrowButton" destination="Pgq-g3-2K8" id="FGY-Pl-bOA"/>
                         <outlet property="forwardArrowView" destination="t6x-m7-0Nf" id="mce-dv-r1i"/>
                         <outlet property="iconBackgroundView" destination="JJL-oj-Gn2" id="e0n-XQ-Fzq"/>
-                        <outlet property="incentiveBottomConstraint" destination="sCd-dz-z5Q" id="e9r-bN-FgG"/>
                         <outlet property="incentiveTitle" destination="zjb-BP-DeT" id="seK-Hr-FBw"/>
                         <outlet property="incentiveType" destination="JU8-Oe-6QQ" id="fRk-fX-4nY"/>
                         <outlet property="incentiveView" destination="WaC-bi-QeX" id="uAj-uP-VMU"/>
@@ -2015,13 +2006,14 @@ per Minute</string>
                         <outlet property="pullUpView" destination="iLi-ju-ZpB" id="ceP-e4-CRK"/>
                         <outlet property="scrollView" destination="X3k-iN-LH2" id="PBb-vM-FCT"/>
                         <outlet property="titleLabel" destination="UDE-lY-7aS" id="N6s-A8-2PY"/>
+                        <outlet property="topConstraint" destination="Q57-Hb-uNE" id="jKF-c8-Jku"/>
                         <outlet property="upArrowButton" destination="74I-OS-NVp" id="f0i-YF-PSa"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="IeO-t1-Y11" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <panGestureRecognizer minimumNumberOfTouches="1" id="E9B-DF-pRV">
                     <connections>
-                        <action selector="panning:" destination="YTZ-GH-zS5" id="9jK-o0-SwZ"/>
+                        <action selector="viewDragged:" destination="YTZ-GH-zS5" id="Hbr-0D-gqb"/>
                     </connections>
                 </panGestureRecognizer>
             </objects>
